--- a/src/main/main.css
+++ b/src/main/main.css
@@ -1,5 +1,5 @@
 .main_top {
-  height: 120px;
+  height: 90px;
   /* border: 1px solid black; */
   width: "100%";
   display: flex;
@@ -11,19 +11,19 @@
   width: 700px;
   /* border: 1px solid black; */
   display: inline-block;
-  font-size: 40pt;
+  font-size: 26pt;
   font-family: "cookie";
   margin-top: 20px;
   display: inline-block;
-  margin-left: 280px;
+  margin-left: 210px;
 }
 
 .main_loginbox {
   height: 100px;
   width: 137px;
   /* border: 1px solid black; */
-  margin-top: 15px;
-  margin-right: 280px;
+  /* margin-top: 15px; */
+  margin-right: 200px;
   display: flex;
   justify-content: left;
   align-items: center;
@@ -35,24 +35,24 @@
 
 .main_middlemenubox {
   /* border: 1px solid black; */
-  height: 68px;
+  height: 55px;
   background-color: #6f00cc;
   display: flex;
   align-items: center;
 }
 
 .main_topsubtitle {
-  font-size: 15pt;
+  font-size: 10pt;
   font-family: "gmarket";
 }
 
 .main_middlemenuboxinbox {
   /* border: 1px solid black; */
-  margin-left: 280px;
-  width: 500px;
+  margin-left: 210px;
+  width: 380px;
   display: flex;
   justify-content: space-between;
-  font-size: 15pt;
+  font-size: 11pt;
   font-family: "gmarket";
   height: 68px;
   align-items: center;
@@ -61,8 +61,8 @@
 .main_middlemenu {
   display: block;
   color: white;
-  width: 120px;
-  height: 68px;
+  width: 100px;
+  height: 55px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -78,7 +78,7 @@
   /* color: black; */
   /* display: block; */
   /* color: white; */
-  width: 100px;
+  width: 70px;
   height: 68px;
   display: flex;
   align-items: center;
@@ -89,23 +89,44 @@
 }
 
 .main_middlemenubox2 {
-  height: 60px;
+  height: 45px;
   background-color: #e9e9e9;
   box-shadow: 1px 1px lightgray;
 }
 
 .main_middlemenuboxinbox2 {
   /* border: 1px solid black; */
-  margin-left: 280px;
-  width: 1200px;
+  margin-left: 220px;
+  width: 1000px;
   display: flex;
   justify-content: space-between;
-  font-size: 12pt;
+  font-size: 10pt;
   /* font-family: 'gmarket'; */
-  height: 68px;
+  height: 45px;
   align-items: center;
 }
 
 .main_middlemenuboxinbox2 :hover {
   color: blue;
+}
+
+.main_contents {
+  /* border: 1px solid black; */
+  height: 2000px;
+  display: flex;
+  justify-content: center;
+}
+
+.main_board_content {
+  width: 760px;
+  /* border-right: 1px solid gray; */
+  /* border: 1px solid black; */
+  height: 2000px;
+  /* padding-right: 10px; */
+}
+
+.main_chatt_content {
+  width: 340px;
+  /* border: 1px solid black; */
+  height: 2000px;
 }
