--- a/src/board/boardMain.css
+++ b/src/board/boardMain.css
@@ -4,6 +4,7 @@
   height: 2000px;
   border-right: 1px solid lightgray;
   padding-right: 10px;
+  margin-top: 30px;
 }
 
 .boardmain_title {
@@ -19,4 +20,26 @@
   display: flex;
   justify-content: space-between;
   font-family: "gmarket";
+}
+
+.boardmain_boardBtn {
+  cursor: pointer;
+  border: 1px solid lightgray;
+  border-radius: 3px;
+  outline: 0;
+  margin-right: 10px;
+  background-color: white;
+  font-size: 9pt;
+  margin-top: 12px;
+}
+
+.boardmain_writeBtn {
+  margin-bottom: 15;
+  cursor: pointer;
+  border: 1px solid #11264f;
+  border-radius: 3px;
+  outline: 0;
+  background-color: #11264f;
+  color: white;
+  font-size: 9pt;
 }
