--- a/src/board/boardMete.css
+++ b/src/board/boardMete.css
@@ -4,17 +4,18 @@
   /* border: 1px solid black; */
   /* background-color: #6f00cc; */
   /* display: inline; */
+  margin-top: 10px;
 }
-.mete_titlebox {
-  /* background-color: #f6eefd; */
-}
+/* NU7JM { */
+/* background-color: #f6eefd; */
+/* } */
 
 .mete_Btitle {
   font-size: 12pt;
 
-  border-top: 1px solid black;
+  /* border-top: 1px solid black; */
   padding-left: 10px;
-  margin-top: 10px;
+  /* margin-top: 10px; */
   padding-top: 10px;
 
   font-weight: 600;
@@ -31,8 +32,8 @@
   flex-direction: row;
   /* padding-left: 10px; */
   font-size: 10pt;
-  margin-top: 5px;
-  padding-bottom: 10px;
+  margin-top: 10px;
+  padding-bottom: 20px;
   border-bottom: 1px solid lightgray;
 }
 
@@ -107,14 +108,20 @@
   /* height: 85px; */
   color: white;
   width: 75px;
-  background-color: black;
+  background-color: #11264f;
   cursor: pointer;
+  border: 0;
 }
 
 .mete_textareabox2 {
   display: flex;
+  margin-top: 5px;
 }
 .mete_line {
   height: 2px;
   border-bottom: 1px solid black;
+}
+
+.mete_lickbox {
+  display: flex;
 }
