--- a/src/main/main.css
+++ b/src/main/main.css
@@ -9,11 +9,13 @@
 .main_toptitle {
   height: 100px;
   width: 700px;
+  min-width: 700px;
+
   /* border: 1px solid black; */
   display: inline-block;
   font-size: 26pt;
-  font-family: "cookie";
-  margin-top: 20px;
+  font-family: "gmarket";
+  margin-top: 30px;
   display: inline-block;
   margin-left: 210px;
 }
@@ -21,16 +23,27 @@
 .main_loginbox {
   height: 100px;
   width: 137px;
+  min-width: 137px;
   /* border: 1px solid black; */
   /* margin-top: 15px; */
   margin-right: 200px;
   display: flex;
   justify-content: left;
   align-items: center;
+  margin-top: 10px;
 }
 
 .main_login {
   margin-right: 10px;
+
+  cursor: pointer;
+  border: 1px solid gray;
+  border-radius: 3px;
+  outline: 0;
+  margin-right: 10px;
+  background-color: white;
+  font-size: 9pt;
+  /* margin-top: 12px; */
 }
 
 .main_middlemenubox {
@@ -78,14 +91,17 @@
   /* color: black; */
   /* display: block; */
   /* color: white; */
-  width: 70px;
-  height: 68px;
+  /* width: 70px; */
+  /* height: 68px; */
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
   /* border: 1px solid black; */
   text-align: center;
+  border: 0px;
+  background-color: #e9e9e9;
+  outline: none;
 }
 
 .main_middlemenubox2 {
@@ -119,6 +135,7 @@
 
 .main_board_content {
   width: 760px;
+  min-width: 760px;
   /* border-right: 1px solid gray; */
   /* border: 1px solid black; */
   height: 2000px;
@@ -127,6 +144,7 @@
 
 .main_chatt_content {
   width: 340px;
+  min-width: 340px;
   /* border: 1px solid black; */
   height: 2000px;
 }
