--- a/src/main/main.css
+++ b/src/main/main.css
@@ -15,9 +15,13 @@
   display: inline-block;
   font-size: 26pt;
   font-family: "gmarket";
-  margin-top: 30px;
-  display: inline-block;
+  margin-top: -5px;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  /* flex-direction: column; */
   margin-left: 210px;
+  /* margin-bottom: 50px; */
 }
 
 .main_loginbox {
