'코드옮기기'

--- a/src/board/boardreple.css
+++ b/src/board/boardreple.css
@@ -49,6 +49,6 @@
 .rep_reple {
   padding-right: 10px;
   margin-top: 10px;
-  padding-bottom: 10px;
+  /* padding-bottom: 10px; */
   padding-left: 10px;
 }
