--- a/src/message/message.css
+++ b/src/message/message.css
@@ -2,7 +2,7 @@
   width: 340px;
   height: 500px;
   /* background-color: black; */
-  margin-top: 50px;
+  margin-top: 35px;
   /* border: 1px solid black; */
   display: flex;
   justify-content: center;
@@ -38,4 +38,35 @@
   width: 320px;
   height: 40px;
   background-color: #d5a2ff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Allview_main {
+  margin-bottom: 10px;
+  margin-left: 5px;
+  /* display: flex; */
+  text-align: right;
+}
+
+.Allview_main2 {
+  margin-bottom: 10px;
+  margin-left: 10px;
+}
+
+.Allview_name {
+  font-weight: 600;
+}
+
+.Allview_body {
+  font-size: 11pt;
+}
+
+.Allview_body2 {
+  right: 0;
+}
+
+.messageInput {
+  width: 250px;
 }
